--- a/my-app/public/css/pages/game/style.css
+++ b/my-app/public/css/pages/game/style.css
@@ -1,13 +1,23 @@
+
+.buttons-lists_asg {
+  background: #bcb5b5;
+  border: 2px solid #060606;
+  font-weight: 800;
+}
+
+.button-active-b {
+  background: #1975cb;
+}
+
+.button-active-r {
+  background: #1975cb;
+}
+
 .div-array {
   width: 100%;
   /*margin: 0 auto;*/
   padding: 70px;
 }
-/*
-.buttons-lists {
-    width: 50px;
-    height: 50px;
-  }*/
 .buttons-lists {
   background: #bcb5b5;
   border: 2px solid #060606;
