diseño parte 1 de screen 1

--- a/my-app/public/css/pages/game/style.css
+++ b/my-app/public/css/pages/game/style.css
@@ -33,3 +33,9 @@
 .btn-white{
   background: #ffffff;
 }
+
+.box-lists{
+  display: inline-block;
+  background: transparent;
+  border: 2px solid #1ceee5;
+}
