--- a/my-app/public/css/pages/game/style.css
+++ b/my-app/public/css/pages/game/style.css
@@ -55,3 +55,17 @@
   height: 20px;
   margin: 0 auto;
 }
+
+.titleIntructions{
+  /*font-size: ;*/
+}
+
+.textIntructions{
+  font-size: 18px;
+}
+
+@media (max-width: 1135px) {
+  .textIntructions {
+    font-size: 16px;
+  }
+}
